--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -598,53 +598,6 @@ pipelines:
              partition:
                mpp-format-int: '{image4k.layout[''boot''].partnum}'
              target: /boot
-  - name: raw-qemu-image
-    stages:
-      - type: org.osbuild.copy
-        inputs:
-          tree:
-            type: org.osbuild.tree
-            origin: org.osbuild.pipeline
-            references:
-              - name:raw-image
-        options:
-          paths:
-            - from: input://tree/disk.img
-              to: tree:///disk.img
-      # Increase the size to the cloud image size
-      - type: org.osbuild.truncate
-        options:
-          filename: disk.img
-          size:
-            mpp-format-string: "{cloud_image_size_mb * 1024 * 1024}"
-      - type: org.osbuild.coreos.platform
-        options:
-          platform: qemu
-        devices:
-          disk:
-            type: org.osbuild.loopback
-            options:
-              filename: disk.img
-              partscan: true
-        mounts:
-           - name: root
-             type: org.osbuild.xfs
-             source: disk
-             partition:
-               mpp-format-int: '{image.layout[''root''].partnum}'
-             target: /
-           - name: ostree.deployment
-             type: org.osbuild.ostree.deployment
-             options:
-               source: mount
-               deployment:
-                 default: true
-           - name: boot
-             type: org.osbuild.ext4
-             source: disk
-             partition:
-               mpp-format-int: '{image.layout[''boot''].partnum}'
-             target: /boot
   - name: metal
     stages:
       - type: org.osbuild.copy
@@ -673,24 +626,9 @@ pipelines:
             - from: input://tree/disk.img
               to:
                 mpp-format-string: 'tree:///{filename}'
-  - name: qemu
-    stages:
-      - type: org.osbuild.qemu
-        inputs:
-          image:
-            type: org.osbuild.files
-            origin: org.osbuild.pipeline
-            references:
-              name:raw-qemu-image:
-                file: disk.img
-        options:
-          filename:
-            mpp-format-string: '{filename}'
-          format:
-            type: qcow2
-            compression: false
-            compat: '1.1'
   - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
+  - mpp-import-pipelines:
+      path: platform.qemu.ipp.yaml
