osbuild: only deploy a single deployment
We were calling both `org.osbuild.ostree.deploy.container` and
`org.osbuild.ostree.deploy` because we were hitting the `else` block
that we weren't before. See:

https://github.com/coreos/coreos-assembler/pull/3758#issuecomment-1997504582

Fix the logic here to not do that. This is hacky and verbose but will
unblock us for now. We should work on cleaning this up so that e.g. we
only define the `org.osbuild.ostree.deploy.container` stage once.

Fixes b74e2f986 ("osbuild: Allow deploy via container image").

--- a/src/osbuild-manifests/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.ppc64le.mpp.yaml
@@ -138,48 +138,49 @@ pipelines:
               references:
                 name:oci-archive:
                   name: coreos.ociarchive
-      - mpp-if: container_repo != ''
-        then:
-          type: org.osbuild.ostree.deploy.container
-          options:
-            osname:
-              mpp-format-string: '{osname}'
-            target_imgref:
-              mpp-format-string: '{container_imgref}'
-            mounts:
-              - /boot
-              - /boot/efi
-            kernel_opts:
-              - rw
-              - '$ignition_firstboot'
-          inputs:
-            images:
-              type: org.osbuild.containers
-              origin: org.osbuild.source
-              mpp-resolve-images:
-                images:
-                  - source: $container_repo
-                    tag: $container_tag
-        else:
-          type: org.osbuild.ostree.deploy
-          options:
-            osname:
-              mpp-format-string: '{osname}'
-            remote: fedora
-            mounts:
-              - /boot
-            kernel_opts:
-              - rw
-              - '$ignition_firstboot'
-          inputs:
-            commits:
-              type: org.osbuild.ostree
-              origin: org.osbuild.source
-              mpp-resolve-ostree-commits:
-                commits:
-                  - ref: $ref
-                    remote:
-                      url: $repourl
+        else
+          mpp-if: container_repo != ''
+          then:
+            type: org.osbuild.ostree.deploy.container
+            options:
+              osname:
+                mpp-format-string: '{osname}'
+              target_imgref:
+                mpp-format-string: '{container_imgref}'
+              mounts:
+                - /boot
+                - /boot/efi
+              kernel_opts:
+                - rw
+                - '$ignition_firstboot'
+            inputs:
+              images:
+                type: org.osbuild.containers
+                origin: org.osbuild.source
+                mpp-resolve-images:
+                  images:
+                    - source: $container_repo
+                      tag: $container_tag
+          else:
+            type: org.osbuild.ostree.deploy
+            options:
+              osname:
+                mpp-format-string: '{osname}'
+              remote: fedora
+              mounts:
+                - /boot
+              kernel_opts:
+                - rw
+                - '$ignition_firstboot'
+            inputs:
+              commits:
+                type: org.osbuild.ostree
+                origin: org.osbuild.source
+                mpp-resolve-ostree-commits:
+                  commits:
+                    - ref: $ref
+                      remote:
+                        url: $repourl
       # Drop the immutable bit here (we add it back later) because it
       # causes failures when cleaning up tmp dirs.
       - type: org.osbuild.chattr
