--- a/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
+++ b/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
@@ -1,3 +1,5 @@
+# See the description of testLiveInstalliscsi() in testiso.go for an explanation
+# of what this Butane config is doing.
 variant: fcos
 version: 1.5.0
 storage:
