--- a/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
+++ b/mantle/cmd/kola/resources/iscsi_butane_setup.yaml
@@ -71,8 +71,7 @@ storage:
           #!/bin/bash
           set -euxo
           # Mount the iscsi target
-          iscsiadm --mode discovery --type sendtargets --portal 127.0.0.1
-          iscsiadm --mode node --targetname iqn.2023-10.coreos.target.vm:coreos --login
+          iscsiadm --mode discovery --type sendtargets --portal 127.0.0.1 --login
           # Give a bit of time to udev to create the persistent names paths
           sleep 2
           # Install coreos
