--- a/.tekton/coreos-assembler-pull-request.yaml
+++ b/.tekton/coreos-assembler-pull-request.yaml
@@ -35,7 +35,7 @@ spec:
   - name: path-context
     value: .
   - name: hermetic
-    value: true
+    value: false
   - name: prefetch-input
     value: '[{"type": "rpm", "path": "ci/hermetic"}, {"path": "ci/hermetic", "type": "generic"}]'
   # Note: to be removed once rpm fully supported
