--- a/.tekton/kola-nfs-push.yaml
+++ b/.tekton/kola-nfs-push.yaml
@@ -35,7 +35,7 @@ spec:
   - name: path-context
     value: tests/containers/nfs
   - name: hermetic
-    value: true
+    value: false
   - name: prefetch-input
     value: '[{"type": "rpm", "path": "ci/hermetic"}]'
   # Note: to be removed once rpm fully supported
